# APIPressF-school

./: Dockerfile  main.py  pyproject.toml  requirements.txt
api/: config.py  crud.py  database.py  models.py  routers.py  schames.py
